tests/typechecker/should_pass/module_instances.csp
P = STOP

module M(X)
    x = P
exports
    Y(x) = X == x

    channel c
endmodule

instance M1 = M({})

test1 = M1::Y({0}) == true

test2 = (M1::c) -> STOP

module N
exports
    instance M2 = M({1})

    test1 = M2::Y({1}) == true
endmodule

test3 = N::M2::Y({1}) == true

module N2
    instance M2 = M({1})
exports
    test1 = M2::Y({1}) == true
endmodule

test4 = N2::test1
