tests/typechecker/should_fail/module_instances_6.csp
P = STOP

module M(X)
    x = P
exports
    Y(x) = X == x

    channel c

    test5 =
        let
            instance M2 = M({1})
        within M2::Y({1}) == true
endmodule

